<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/fondoTurquesa"> <!-- Color de fondo turquesa -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iconCategoria"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/categoria_icon"
            android:scaleType="centerInside"
            android:src="@drawable/ic_toy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNombreCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria_default_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDescripcionCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/categoria_default_description"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
